--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-commerce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -23,6 +24,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^13.0.1",
+    "nodemon": "^3.1.10",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
     "webpack-node-externals": "^3.0.0"
